--- a/index.html
+++ b/index.html
@@ -397,9 +397,9 @@
                                     <div id="description">
                                         <div>
                                             <span id="des_arrow" class="m_device">➤</span>
-                                            Real-time chat application built using Django + redis and
-                                            WebSocket's. The application supports secure user authentication,
-                                            private one-to-one messaging, and multi-user chat rooms.
+                                            Real-time chat application built into docker image (Django + redis) and
+                                            use of WebSocket's. The application supports secure user authentication,
+                                            private one-to-one messaging.
                                             <span id="rev_des_arrow">➤</span>
                                         </div>
                                         <div>
