--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                                     <div id="description">
                                         <div>
                                             <span id="des_arrow" class="m_device">➤</span>
-                                            Real-time chat application built into docker image (Django + redis) and
+                                            Real-time chat application containerized into docker image (Django + redis) and
                                             use of WebSocket's. The application supports secure user authentication,
                                             private one-to-one messaging.
                                             <span id="rev_des_arrow">➤</span>
