--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="nav">
                 <div class="nav_bar">
                     <div class="logo">
-                        <div class="span">
+                        <div class="span" id="vs_check">
                             <span>S</span>
                         </div>
                         <p>Software Developer</p>
