--- a/index.html
+++ b/index.html
@@ -152,69 +152,6 @@
                     </div>
                 </div>
             </section>
-            <!-- <section id="skills">
-                <div id="skills1">
-                    <h2>Skills</h2>
-                    <ul id="skills123">
-                        <li>
-                            <h3>Python<p>80%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 80%;">80%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>Java<p>80%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 80%;">80%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>Django<p>70%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 70%;">70%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>HTML/CSS<p>80%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 80%;">80%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>Javascript<p>80%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 60%;">60%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>NodeJS<p>40%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 40%;">40%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>ReactJS<p>70%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 70%;">70%</div>
-                            </div>
-                        </li>
-                        <li>
-                            <h3>MySQL<p>70%</p>
-                            </h3>
-                            <div class="progress">
-                                <div class="progress-bar" style="width: 70%;">70%</div>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </section> -->
             <section>
                 <div id="resume">
                     <h2>Resume</h2>
@@ -477,6 +414,11 @@
                             <div>ElectronJS</div>
                         </div>
 
+                        <div id="skill_angjs" class="rs-skill">
+                            <img src="Skills/angular-svg.svg" alt="AngularJS">
+                            <div>AngularJS</div>
+                        </div>
+
                         <div id="skill_dkr" class="rs-skill">
                             <img src="Skills/docker-svg.svg" alt="docker">
                             <div>Docker</div>
@@ -492,19 +434,24 @@
                             <div>ExpressJS</div>
                         </div>
 
-                        <div id="skill_msql" class="rs-skill">
-                            <img src="Skills/mysql-svg.svg" alt="MySQL">
-                            <div>MySQL</div>
-                        </div>
-
                         <div id="skill_mdb" class="rs-skill">
                             <img src="Skills/mongo-svg.svg" alt="MongoDB">
                             <div>MongoDB</div>
                         </div>
 
+                        <div id="skill_msql" class="rs-skill">
+                            <img src="Skills/mysql-svg.svg" alt="MySQL">
+                            <div>MySQL</div>
+                        </div>
+
                         <div id="skill_rds" class="rs-skill">
                             <img src="Skills/redis-svg.svg" alt="Redis">
                             <div>Redis</div>
+                        </div>
+
+                        <div id="skill_sprbt" class="rs-skill">
+                            <img src="Skills/spring-boot-svg.svg" alt="Spring Boot">
+                            <div>Spring Boot</div>
                         </div>
 
                         <div id="skill_git" class="rs-skill">
